# mac-app-env.py

./: README.md  requirements.txt  setup.cfg  setup.py
mac_app_env/: __init__.py  __main__.py
