# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-app-env
version = 2019.4.13
url = https://github.com/looking-for-a-job/mac-app-env.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mac app env

[options]
install_requires = 
	click
	env_file
	public
	setuptools
packages = 
	mac_app_env
